modify frontend svc type

--- a/helm/templates/frontend.yaml
+++ b/helm/templates/frontend.yaml
@@ -34,7 +34,7 @@ kind: Service
 metadata:
   name: frontend-service
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: frontend
   ports:
