--- a/helm/templates/frontend.yaml
+++ b/helm/templates/frontend.yaml
@@ -33,8 +33,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-  annotations:
-    kubernetes.io/elb.id: 8f77abec-5476-4a75-bf8b-a7ea5497303f # ELB ID，替换为实际值  
+  # annotations:
+  #   kubernetes.io/elb.id: 8f77abec-5476-4a75-bf8b-a7ea5497303f # ELB ID，替换为实际值  
 spec:
   type: LoadBalancer
   selector:
