--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ image: docker:20.10.16
 
 variables:
   DOCKER_TLS_CERTDIR: "/certs"
-  DOCKERHUB_USERNAME: "lyzhang1999"
+  DOCKERHUB_USERNAME: "ninesun0318"
 
 services:
   - docker:20.10.16-dind
